<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">龙城助手</string>
    <string name="app_name_en">DNDClub</string>
    <string name="nav_website">oudezhinu.site</string>
    <string name="settings">设置</string>
    <string name="information">关于</string>
    <string name="help">帮助</string>
    <string name="update">更新</string>
    <string name="feedback">反馈</string>
    <string name="tab_shop">冒险商店</string>
    <string name="tab_book">大图书馆</string>
    <string name="tab_tool">功能集合</string>
    <!-- 通用 -->
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="delete_confirm">确定删除</string>
    <!-- 设置页 -->
    <string name="pref_header_general">通用</string>
    <string name="pref_header_database">数据库</string>
    <string name="pref_header_user">账户</string>
    <string name="pref_username">用户名</string>
    <string name="pref_default_name">匿名</string>
    <string name="pref_mail">邮箱</string>
    <string name="pref_mysql_ip">远程Mysql地址</string>
    <string name="pref_default_mysqlip">114.115.162.138</string>
    <string name="pref_mysql_username">远程Mysql用户名</string>
    <string name="pref_default_mysqlname">trpg</string>
    <string name="pref_mysql_pwd">远程Mysql密码</string>
    <string name="pref_default_mysqlpwd">trpg123</string>
    <string name="pref_source">应用资料版本</string>
    <string name="pref_path">本地保存路径</string>
    <string-array name="pref_source_titles">
        <item>3R</item>
        <item>5E</item>
    </string-array>
    <string-array name="pref_source_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <!-- Shop Fragment -->
    <string name="shop_recyclerview1">武器商店</string>
    <string name="shop_recyclerview2">防具商店</string>
    <string name="shop_recyclerview3">物品商店</string>
    <string name="shop_recyclerview4">魔法商店</string>
    <string name="shop_recyclerview5">旅行商人</string>
    <!-- Book Fragment -->
    <string name="book_recyclerview1">法师法术</string>
    <string name="book_recyclerview2">牧师法术</string>
    <string name="book_recyclerview3">游侠法术</string>
    <string name="book_recyclerview4">诗人法术</string>
    <string name="book_recyclerview5">德鲁伊法术</string>
    <string name="book_recyclerview6">圣武士法术</string>
    <!-- Tool Fragment -->
    <string name="tool_recyclerview1">模拟骰子</string>
    <string name="tool_recyclerview2">角色购点</string>
    <!-- Shop Activity -->
    <string name="shop_weapon">武器店</string>
    <string name="shop_armor">盔甲店</string>
    <string name="shop_item">杂货铺</string>
    <string name="shop_magic">奥法商会</string>
    <string name="item_name">物品名称:</string>
    <string name="item_source">物品来源:</string>
    <string name="item_type">物品类型:</string>
    <string name="item_price">物品价格:</string>
    <string name="item_weight">物品重量:</string>
    <string name="item_explain">物品介绍:</string>
    <string name="modify">修改</string>
    <string name="buy">购买</string>
    <string name="detail">详情</string>
    <string name="insert">插入</string>
    <string name="search">搜索:</string>
    <string name="operation">操作:</string>
    <string name="filter">筛选:</string>
    <string name="query">查询</string>
    <string name="gold">金币</string>
    <string name="pound">磅</string>
    <string name="imports">导入</string>
    <string name="exports">导出</string>
    <string name="imports_success">导入成功！</string>
    <string name="imports_fail">导入失败！</string>
    <string name="exports_success">导出成功！</string>
    <string name="exports_fail">导出失败！</string>
    <string name="hint_add_cancel">新增已取消</string>
    <string name="hint_name_null">名称不能为空</string>
    <string name="hint_name_exist">相同名称已存在，请更换名称！</string>
    <string name="hint_add_success">新数据插入成功！</string>
    <string name="hint_query_null">查询为空!</string>
    <string name="hint_delete_success">数据已删除</string>
    <string name="hint_delete_undo">撤销删除</string>
    <string name="hint_delete_cancel">删除已取消!</string>
    <string name="hint_modify">请修改至少一个值！</string>
    <string name="hint_modify_success">修改成功！</string>
    <string name="hint_to_achieve">待实现！</string>
    <string name="hint_value_null">某些值不能为空!</string>
    <string name="armor_name">防具名称:</string>
    <string name="armor_source">防具来源:</string>
    <string name="armor_type">防具类型:</string>
    <string name="armor_bonus">盔甲盾牌加值:</string>
    <string name="dex_bonus">最大敏捷加值:</string>
    <string name="armor_minus">防具检定减值:</string>
    <string name="magic_failue">奥术失败概率:</string>
    <string name="armor_price">防具价格:</string>
    <string name="armor_weight">防具重量:</string>
    <string name="armor_explain">防具介绍:</string>
    <string name="weapon_name">武器名称:</string>
    <string name="weapon_source">武器来源:</string>
    <string name="weapon_type">武器类型:</string>
    <string name="attack_type">攻击类型:</string>
    <string name="use_type">使用类型:</string>
    <string name="damage_type">伤害类型:</string>
    <string name="damage_s">伤害(S):</string>
    <string name="damage_m">伤害(M):</string>
    <string name="weapon_crit">武器重击:</string>
    <string name="weapon_range">武器射程:</string>
    <string name="weapon_price">武器价格:</string>
    <string name="weapon_weight">武器重量:</string>
    <string name="weapon_explain">武器介绍:</string>
    <!-- Update -->
    <string name="update_updating">正在更新，请稍后...</string>
    <string name="update_cancel">取消更新.</string>
    <string name="update_download_null">下载地址为空</string>
    <string name="update_latest">当前已是最新版本</string>
    <string name="update_force">此版本需要更新，程序即将退出</string>
    <string name="update_to">更新到</string>
    <string name="update_download">下载</string>
    <string name="update_downloading">正在下载...</string>
    <string name="update_permission_title">权限提醒</string>
    <string name="update_permission_setting">权限设置</string>
    <string name="update_msg1">更新软件需要您允许我们获取您的数据读写权限,否则将无法更新</string>
    <string name="update_msg2">为了正常升级APP，请点击设置-高级设置-允许安装未知来源应用，本功能只限用于APP版本升级</string>
    <string name="Error_TimeOut">更新超时！</string>
    <string name="Error_Intenet">未知网络异常！</string>
    <string name="Error_BadGatway">网络无法连接，请检查网络！</string>
    <string name="update_updated">已是最新版本!</string>
    <!-- Comment -->
    <string name="current_user">当前用户：</string>
    <string name="current_email">当前邮箱：</string>
    <string name="comment_success">反馈成功！</string>
    <string name="comment_fail">反馈失败！</string>
    <string name="comment_repeat">请不要反馈重复内容！</string>
    <string name="comment_cancel">评论取消，内容已自动保存!</string>
</resources>
